deploy/kustomize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: takehome
  labels:
    app.kubernetes.io/part-of: takehome
